--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Flexbox Sistema de Mensajeria </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <title>Desafio Flexbox Sistema de Mensajeria Cristian beroiza</title>
+
+    <!-- Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!--css custom-->
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 </head>
 <body>
     <div class="container">
         <div class="menu">
+
+
             <div class="menu_user">
+
                 <div class="user_img">
                     <img src="./assets/img/maria.jpg" alt="imagen de perfil">
                     <div class="user_name">
@@ -19,18 +31,87 @@
                         <div class="small">Activa ahora</div>
                     </div>
                 </div>
+
                 <div class="icons">
                     <i class="fas fa-commet-dots"></i>
                     <i class="fas fa-bars"></i>
                 </div>
+
             </div>
+
             <div class="button">
                 <button>Nuevo Chat</button>
             </div>
+
+            <div class="contacts">
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Maria</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Daniela</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Roberto</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Juan</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Pedro</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Mario</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Alejandro</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+                <div class="user_img">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="imagen de perfil">
+                    <div class="user_name">
+                        <div>Alejandra</div>
+                        <div class="small">Activa ahora</div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="main">
-            <h1>Content</h1>
+            <div class="principal">
+                <img src="./assets/img/hand.png" width="400px" alt="imagen principal">
+                <h1>Comienza el networking</h1>
+                <div>
+                    Lorem ipsum dolor sit amet <b>consectetur</b> adipisicing. 
+                </div>
+            </div>
         </div>
 
     </div>
